--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.11.0",
+    "moment-timezone": "^0.5.33",
+    "mongoose": "^5.12.0",
     "mongoose-delete": "^0.5.3",
     "mongoose-slug-generator": "^1.0.4",
     "passport": "^0.4.1",
